[imad-console] Updates ui/article-one1.html

--- a/ui/article-one1.html
+++ b/ui/article-one1.html
@@ -4,6 +4,7 @@
         <title>
            Article-one | Lavanya sanagavarapu
         </title>
+        <meta name="viewport" content="width=device-width initial-scale=0"/>
     </head>
     <body>
         <div>
