[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -5,31 +5,39 @@
            Article-three | Lavanya sanagavarapu
         </title>
         <meta name="viewport" content="width=device-width initial-scale=0"/>
+        
+        <style>
+            .container{
+                max-width: 800px;
+            }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article one
-        </h3>
-        <div>
-            Feb 14, 2018
-        </div>
-        <div>
-            <p>
-                This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.
-             </p>
-             <p>
-                This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.
-             </p>
-             <p>
-                This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle. 
-            </p>
-            <p>
-                This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.
-             </p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article one
+            </h3>
+            <div>
+                Feb 14, 2018
+            </div>
+            <div>
+                <p>
+                    This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.
+                 </p>
+                 <p>
+                    This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.
+                 </p>
+                 <p>
+                    This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle. 
+                </p>
+                <p>
+                    This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.This is the actual content of my third atricle.
+                 </p>
+            </div>
         </div>
     </body>
 </html>
