--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -9,6 +9,9 @@
         <style>
             .container{
                 max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
             }
         </style>
     </head>
