--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -12,6 +12,7 @@
                 margin: 0 auto;
                 color: grey;
                 font-family: sans-serif;
+                padding: 60 0 20 20;
             }
         </style>
     </head>
