[imad-console] Updates ui/article-one1.html

--- a/ui/article-one1.html
+++ b/ui/article-one1.html
@@ -6,14 +6,9 @@
         </title>
         <meta name="viewport" content="width=device-width initial-scale=0"/>
         
+        <link href="/ui/style.css" rel="stylesheet"/>
         <style>
-            .container{
-                max-width: 800px;
-                margin: 0 auto;
-                color: grey;
-                font-family: sans-serif;
-                 padding: 60 20 0 20;
-            }
+           
         </style>
     </head>
     <body>
