--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id="name text" class="center text-big bold">
             Hi! I am Lavanya and this is my first webapp.
         </div>
         <script>
